--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
   </head>
 
   <body>
-    The content of the document......
-    <p> Hello World! </p>
+    <header class="page-header">
+      <h4>The Mood Shop</h4>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Cart</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
