connect cart to footer

--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
       <!-- Display moods here -->
     </div>
     <footer>
-      <!-- Footer -->
+      <div id='cart-qty'>
+        <!-- cart qty here -->
+      </div>
+      <ul id='item-list'>
+        <!-- cart items -->
+      </ul>
+      <div id='cart-total'>
+        <!-- cart total -->
+      </div>
     </footer>
     <script src="scripts.js" type="module"></script>
     
