cart fully functional

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class='items' id='items'>
       <!-- Display moods here -->
     </div>
-    <footer>
+    <footer class="cart">
       <div id='cart-qty'>
         <!-- cart qty here -->
       </div>
